ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-norsk-amerikanske-aviser
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - secretName: nginx-ingress-secret
    hosts:
     - "beta.nb.no"
  rules:
  - host: "beta.nb.no"
    http:
      paths:
      - pathType: Prefix
        path: "/norsk-amerikanske-aviser"
        backend:
          service:
            name: norsk-amerikanske-aviser-service
            port:
              number: 80
